--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
 
     header {
       background: linear-gradient(rgba(78, 52, 46, 0.6), rgba(78, 52, 46, 0.6)),
-        url('images/anh-bia-thoi-trang.jpg') center/cover no-repeat;
+        url('/images/anh-bia-thoi-trang.jpg') center/cover no-repeat;
       background-color: var(--main-color);
       height: 100vh;
       color: white;
@@ -316,7 +316,7 @@
   <section>
     <div class="section-title">Về MintShop</div>
     <div class="about">
-      <img src="images/meo_buong.jpg" alt="MintShop Boutique">
+      <img src="/images/meo_buong.jpg" alt="MintShop Boutique">
       <div class="about-text">
         <p>MintShop là thương hiệu thời trang cao cấp mang đậm phong cách thanh lịch và hiện đại...</p>
       </div>
@@ -325,9 +325,9 @@
 
   <div class="banner-container">
     <div class="banner-slide" id="bannerSlide">
-      <img src="images/dam-du-tiec-cao-cap-sang-trong-rot-vai.jpg" alt="Banner 1">
-      <img src="images/ao-blazer-nu-trang-tay-dai-ak10-11.webp" alt="Banner 2">
-      <img src="images/tui_sach_thoi_trang.jpg" alt="Banner 3">
+      <img src="/images/dam-du-tiec-cao-cap-sang-trong-rot-vai.jpg" alt="Banner 1">
+      <img src="/images/ao-blazer-nu-trang-tay-dai-ak10-11.webp" alt="Banner 2">
+      <img src="/images/tui_sach_thoi_trang.jpg" alt="Banner 3">
     </div>
   </div>
 
@@ -335,19 +335,19 @@
     <div class="section-title">Sản phẩm nổi bật</div>
     <div class="products">
       <div class="product">
-        <img src="images/dam-du-tiec-cao-cap-sang-trong-rot-vai.jpg" alt="Váy dự tiệc">
+        <img src="/images/dam-du-tiec-cao-cap-sang-trong-rot-vai.jpg" alt="Váy dự tiệc">
         <h3>Váy dự tiệc</h3>
         <p>2.490.000₫</p>
         <button class="add-to-cart" data-name="Váy dự tiệc" data-price="2490000">Thêm vào giỏ</button>
       </div>
       <div class="product">
-        <img src="images/ao-blazer-nu-trang-tay-dai-ak10-11.webp" alt="Áo blazer">
+        <img src="/images/ao-blazer-nu-trang-tay-dai-ak10-11.webp" alt="Áo blazer">
         <h3>Áo blazer cao cấp</h3>
         <p>1.790.000₫</p>
         <button class="add-to-cart" data-name="Áo blazer cao cấp">Thêm vào giỏ</button>
       </div>
       <div class="product">
-        <img src="images/tui_sach_thoi_trang.jpg" alt="Túi xách da">
+        <img src="/images/tui_sach_thoi_trang.jpg" alt="Túi xách da">
         <h3>Túi xách da sang trọng</h3>
         <p>3.200.000₫</p>
         <button class="add-to-cart" data-name="Túi xách da sang trọng">Thêm vào giỏ</button>
