--- a/index.html
+++ b/index.html
@@ -441,7 +441,7 @@
     
     document.getElementById('checkout-btn').addEventListener('click', function () {
     // Điều hướng sang trang thanh toán
-    window.location.href = 'thanh-toan.html';
+    window.location.href = 'thanhtoan.html';
   });
 
   // Đóng giỏ hàng khi bấm nút Đóng
