--- a/thanhtoan.html
+++ b/thanhtoan.html
@@ -3,35 +3,113 @@
 <head>
   <meta charset="UTF-8" />
   <title>Thanh Toán - MintShop</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      background-color: #f8f8f8;
+      padding: 20px;
+    }
+    h1 {
+      text-align: center;
+      color: #333;
+    }
+    ul {
+      list-style: none;
+      padding: 0;
+      max-width: 600px;
+      margin: 20px auto;
+    }
+    li {
+      background: #fff;
+      border: 1px solid #ddd;
+      border-radius: 8px;
+      padding: 15px;
+      margin-bottom: 15px;
+      display: flex;
+      align-items: center;
+      gap: 15px;
+    }
+    li img {
+      width: 80px;
+      height: 80px;
+      object-fit: cover;
+      border-radius: 6px;
+    }
+    .info {
+      flex: 1;
+    }
+    .name {
+      font-size: 18px;
+      font-weight: bold;
+    }
+    .price {
+      color: green;
+      margin-top: 4px;
+    }
+    .total {
+      text-align: center;
+      font-size: 20px;
+      margin-top: 20px;
+      color: #000;
+    }
+    button {
+      display: block;
+      margin: 30px auto 0;
+      padding: 12px 24px;
+      background-color: #28a745;
+      color: white;
+      border: none;
+      font-size: 16px;
+      border-radius: 6px;
+      cursor: pointer;
+    }
+    button:hover {
+      background-color: #218838;
+    }
+  </style>
 </head>
 <body>
   <h1>Giỏ hàng của bạn</h1>
   <ul id="checkout-cart-items"></ul>
-  <div>Tổng tiền: <span id="checkout-cart-total">0₫</span></div>
+  <div class="total">Tổng tiền: <span id="checkout-cart-total">0₫</span></div>
+  <button onclick="confirmPayment()">Xác nhận thanh toán</button>
 
   <script>
-    // Hàm format tiền
     function formatCurrency(value) {
       return value.toLocaleString("vi-VN") + "₫";
     }
 
-    // Lấy giỏ hàng từ localStorage
     const cart = JSON.parse(localStorage.getItem('cart')) || [];
 
-    // Hiển thị giỏ hàng
     const cartItemsElem = document.getElementById('checkout-cart-items');
     const cartTotalElem = document.getElementById('checkout-cart-total');
 
     let total = 0;
     cart.forEach(item => {
       const li = document.createElement('li');
+
       const itemTotal = item.price * item.qty;
       total += itemTotal;
-      li.textContent = `${item.name} x${item.qty} - ${formatCurrency(itemTotal)}`;
+
+      li.innerHTML = `
+        <img src="${item.image || 'https://via.placeholder.com/80'}" alt="${item.name}" />
+        <div class="info">
+          <div class="name">${item.name}</div>
+          <div>Số lượng: ${item.qty}</div>
+          <div class="price">${formatCurrency(itemTotal)}</div>
+        </div>
+      `;
+
       cartItemsElem.appendChild(li);
     });
 
     cartTotalElem.textContent = formatCurrency(total);
+
+    function confirmPayment() {
+      alert("Cảm ơn bạn đã thanh toán! Đơn hàng của bạn đang được xử lý.");
+      // Có thể xóa giỏ hàng nếu cần:
+      // localStorage.removeItem('cart');
+    }
   </script>
 </body>
 </html>
