--- a/index.html
+++ b/index.html
@@ -340,13 +340,16 @@
         <p>2.490.000₫</p>
         <button class="add-to-cart" data-name="Váy dự tiệc" data-price="2490000" data-src="/images/dam-du-tiec-cao-cap-sang-trong-rot-vai.jpg">Thêm vào giỏ</button>
       </div>
-      <button class="add-to-cart" 
-        data-name="Áo blazer cao cấp" 
-        data-price="1790000" 
-        data-src="/images/ao-blazer-nu-trang-tay-dai-ak10-11.webp">
-      Thêm vào giỏ
-      </button>
-
+      <div class="product">
+        <img src="/images/ao-blazer-nu-trang-tay-dai-ak10-11.webp" alt="Váy dự tiệc">
+        <h3>Áo blazer cao cấp</h3>
+        <p>1.790.000₫</p>
+      <button class="add-to-cart"  data-name="Áo blazer cao cấp"  data-price="1790000" data-src="/images/ao-blazer-nu-trang-tay-dai-ak10-11.webp">Thêm vào giỏ</button>
+  </div>
+      <div class="product">
+        <img src="/images/tui_sach_thoi_trang.jpg" alt="Túi xách da sang trọng">
+        <h3>Túi xách da sang trọng</h3>
+        <p>3.200.000₫</p>
       <button class="add-to-cart" 
               data-name="Túi xách da sang trọng" 
               data-price="3200000" 
