--- a/thanhtoan.html
+++ b/thanhtoan.html
@@ -70,7 +70,7 @@
 </head>
 <body>
   <h1>Giỏ hàng của bạn</h1>
-  <ul id="checkout-cart-items"></ul>
+  <ul id="checkout-items"></ul>
   <div class="total">Tổng tiền: <span id="checkout-cart-total">0₫</span></div>
   <button onclick="confirmPayment()">Xác nhận thanh toán</button>
 
