--- a/thanhtoan.html
+++ b/thanhtoan.html
@@ -92,7 +92,7 @@
 
   <div id="qr-code">
     <h3>Quét mã QR để thanh toán</h3>
-    <img src="/images/qr-momo.png" alt="QR Code Thanh toán" />
+    <img src="/images/qr-momo.jpg" alt="QR Code Thanh toán" />
   </div>
 
   <script>
