--- a/index.html
+++ b/index.html
@@ -8,6 +8,13 @@
   <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@500;700&family=Poppins:wght@300;400;500&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="style.css" />
 </head>
+<!-- Navigation Bar -->
+<header class="navbar">
+  <div class="logo">MintShop</div>
+  <nav class="nav-links" id="nav-auth-links">
+    <!-- Tự động hiển thị bằng JS -->
+  </nav>
+</header>
 
 <body>
   <button id="view-cart-btn">🛒 Giỏ hàng (<span id="cart-count">0</span>)</button>
