--- a/register.html
+++ b/register.html
@@ -74,7 +74,7 @@
         password: document.getElementById('password').value
       };
 
-      const res = await fetch('/api/auth/register', {
+      const res = await fetch('https://backend-7j0i.onrender.com/auth/register', {
         method: 'POST',
         headers: { 'Content-Type': 'application/json' },
         body: JSON.stringify(data)
