--- a/header.html
+++ b/header.html
@@ -1,5 +1,6 @@
-<header>
-  <h1>MintShop</h1>
-  <p>Phong cách tinh tế – Dành cho bạn</p>
-  <button class="cta-button">Khám phá ngay</button>
-</header>
+<nav class="navbar">
+  <div class="logo">MintShop</div>
+  <div class="nav-links" id="nav-auth-links">
+    <!-- render bằng JS -->
+  </div>
+</nav>
