--- a/index.html
+++ b/index.html
@@ -10,8 +10,11 @@
 </head>
 <!-- Navigation Bar -->
 <header class="navbar">
-
 </header>
+<section class="hero">
+  <h1>Fashion Trends</h1>
+  <p>Mintshop – Thời Trang Cao Cấp</p>
+</section>
 
 <body>
   <button id="view-cart-btn">🛒 Giỏ hàng (<span id="cart-count">0</span>)</button>
