--- a/index.html
+++ b/index.html
@@ -9,8 +9,7 @@
   <link rel="stylesheet" href="style.css" />
 </head>
 <!-- Navigation Bar -->
-<header class="navbar">
-</header>
+<header ></header>
 <section class="hero">
   <h1>Fashion Trends</h1>
   <p>Mintshop – Thời Trang Cao Cấp</p>
