--- a/index.html
+++ b/index.html
@@ -9,7 +9,12 @@
   <link rel="stylesheet" href="style.css" />
 </head>
 <!-- Navigation Bar -->
-<header ></header>
+<nav class="navbar">
+  <div class="logo">MintShop</div>
+  <div class="nav-links" id="nav-auth-links">
+    <!-- render bằng JS -->
+  </div>
+</nav>
 <section class="hero">
   <h1>Fashion Trends</h1>
   <p>Mintshop – Thời Trang Cao Cấp</p>
