--- a/thanhtoan.html
+++ b/thanhtoan.html
@@ -5,82 +5,123 @@
   <title>Thanh Toán - MintShop</title>
   <style>
     body {
-      font-family: Arial, sans-serif;
-      background-color: #f8f8f8;
+      font-family: 'Segoe UI', sans-serif;
+      background-color: #f3ebe3;
       padding: 20px;
       max-width: 700px;
       margin: auto;
+      color: #4b2e2e;
     }
+
     h1 {
       text-align: center;
-      color: #333;
+      color: #5a3e36;
+      margin-bottom: 25px;
     }
+
     ul {
       list-style: none;
       padding: 0;
     }
+
     li {
-      background: #fff;
-      border: 1px solid #ddd;
-      border-radius: 8px;
+      background: #fffaf5;
+      border: 1px solid #e0d4c3;
+      border-radius: 10px;
       padding: 15px;
       margin-bottom: 15px;
       display: flex;
       align-items: center;
       gap: 15px;
+      box-shadow: 0 2px 6px rgba(80, 50, 20, 0.1);
     }
+
     li img {
       width: 80px;
       height: 80px;
       object-fit: cover;
       border-radius: 6px;
     }
+
     .info {
       flex: 1;
     }
+
     .name {
       font-size: 18px;
       font-weight: bold;
+      color: #5a3e36;
     }
+
     .price {
-      color: green;
+      color: #a1662f;
       margin-top: 4px;
+      font-weight: bold;
     }
+
     .total {
       text-align: center;
       font-size: 20px;
       margin-top: 20px;
       color: #000;
+      font-weight: bold;
     }
+
     button {
       display: block;
-      margin: 30px auto 0;
+      margin: 20px auto 0;
       padding: 12px 24px;
-      background-color: #28a745;
+      background-color: #8b5e3c;
       color: white;
       border: none;
       font-size: 16px;
-      border-radius: 6px;
+      border-radius: 8px;
       cursor: pointer;
+      transition: background-color 0.3s;
     }
+
     button:hover {
-      background-color: #218838;
+      background-color: #704a2c;
     }
+
+    input {
+      display: block;
+      width: 100%;
+      padding: 10px;
+      margin: 10px 0;
+      border-radius: 6px;
+      border: 1px solid #cdb8a0;
+      background: #fffefc;
+    }
+
+    label {
+      display: block;
+      margin-top: 10px;
+      font-size: 15px;
+    }
+
     #qr-code {
       display: none;
       max-width: 300px;
       margin: 30px auto;
       text-align: center;
-      background: #fff;
+      background: #fffdf8;
       border-radius: 12px;
       padding: 20px;
-      box-shadow: 0 0 15px rgba(0,0,0,0.1);
+      box-shadow: 0 0 15px rgba(100, 70, 40, 0.1);
+      border: 1px solid #decdbb;
     }
+
     #qr-code img {
       max-width: 100%;
       height: auto;
       border-radius: 10px;
-      border: 1px solid #ccc;
+      border: 1px solid #c8b09a;
+    }
+
+    h3 {
+      color: #4a2c2a;
+      margin-top: 30px;
     }
   </style>
 </head>
@@ -89,27 +130,28 @@
   <ul id="checkout-items"></ul>
   <div class="total">Tổng tiền: <span id="checkout-cart-total">0₫</span></div>
   <button id="confirm-btn">Xác nhận thanh toán</button>
-  
+
   <h3>Thông tin giao hàng</h3>
-  <input id="fullName" placeholder="Họ tên người nhận" required><br>
-  <input id="phone" placeholder="Số điện thoại" required><br>
-  <input id="address" placeholder="Địa chỉ" required><br>
-  
+  <input id="fullName" placeholder="Họ tên người nhận" required />
+  <input id="phone" placeholder="Số điện thoại" required />
+  <input id="address" placeholder="Địa chỉ" required />
   <label><input type="radio" name="payment" value="COD" checked /> Thanh toán khi nhận hàng</label>
+
   <button id="confirm-checkout-btn">Xác nhận thanh toán</button>
+
   <div id="qr-code">
     <h3>Quét mã QR để thanh toán</h3>
     <img src="/images/qr-momo.jpg" alt="QR Code Thanh toán" />
   </div>
-  <button id="paid-btn" style="display:none; margin-top:20px; padding:10px 20px; border:none; background:#007bff; color:#fff; border-radius:6px; cursor:pointer;">Tôi đã thanh toán xong</button>
+
+  <button id="paid-btn" style="display:none; margin-top:20px;">Tôi đã thanh toán xong</button>
 
   <script>
-    
-
     const container = document.getElementById('checkout-items');
     const totalEl = document.getElementById('checkout-cart-total');
     const qrCodeEl = document.getElementById('qr-code');
     const confirmBtn = document.getElementById('confirm-btn');
+    const paidBtn = document.getElementById('paid-btn');
 
     const cartData = localStorage.getItem('cart');
     if (cartData) {
@@ -142,21 +184,13 @@
     confirmBtn.addEventListener('click', () => {
       qrCodeEl.style.display = 'block';
       confirmBtn.style.display = 'none';
+      paidBtn.style.display = 'block';
     });
-    const paidBtn = document.getElementById('paid-btn');
 
-      confirmBtn.addEventListener('click', () => {
-        qrCodeEl.style.display = 'block';
-        confirmBtn.style.display = 'none';
-        paidBtn.style.display = 'block';  // hiện nút xác nhận thanh toán xong
-      });
-      
-      paidBtn.addEventListener('click', () => {
-        // Xóa giỏ hàng
-        localStorage.removeItem('cart');
-        // Chuyển đến trang cảm ơn (bạn tạo trang thankyou.html)
-        window.location.href = 'thankyou.html';
-      });
+    paidBtn.addEventListener('click', () => {
+      localStorage.removeItem('cart');
+      window.location.href = 'thankyou.html';
+    });
   </script>
 </body>
 </html>
