--- a/thanhtoan.html
+++ b/thanhtoan.html
@@ -239,7 +239,7 @@
       };
 
       try {
-        const res = await fetch('https://backend-7j0i.onrender.com/api/orders', {
+        const res = await fetch('https://backend-7j0i.onrender.com/orders', {
           method: 'POST',
           headers: {
             'Content-Type': 'application/json',
