--- a/thanhtoan.html
+++ b/thanhtoan.html
@@ -95,10 +95,12 @@
     }
 
     label {
-      display: flex;
-      margin-top: 10px;
-      font-size: 15px;
-    }
+  display: flex;
+  align-items: center; /* căn giữa theo chiều dọc */
+  gap: 8px; /* khoảng cách giữa input và chữ */
+  margin-top: 10px;
+  font-size: 15px;
+}
 
     #qr-code {
       display: none;
