--- a/thanhtoan.html
+++ b/thanhtoan.html
@@ -148,6 +148,9 @@ label {
   <input id="phone" placeholder="Số điện thoại" required />
   <input id="address" placeholder="Địa chỉ" required />
   <label><input type="radio" name="payment" value="COD" checked /> Thanh toán khi nhận hàng</label>
+<label><input type="radio" name="payment" value="bank" /> Chuyển khoản ngân hàng</label>
+<label><input type="radio" name="payment" value="momo" /> Ví MoMo</label>
+
 
   <button id="confirm-checkout-btn">Xác nhận thanh toán</button>
 
